crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__E305_E30.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E30.py:798:1: E305 (blank-lines-after-function-or-class) [*] Expected 2 blank lines after class or function definition, found (1)
    |
797 |     # another comment
798 | fn()
    | ^^ E305 (blank-lines-after-function-or-class)
799 | # end
    |
    = help: Add missing blank line(s)

ℹ Safe fix
795 795 |     # comment
796 796 | 
797 797 |     # another comment
    798 |+
798 799 | fn()
799 800 | # end
800 801 | 

E30.py:809:1: E305 (blank-lines-after-function-or-class) [*] Expected 2 blank lines after class or function definition, found (1)
    |
808 |     # another comment
809 | a = 1
    | ^ E305 (blank-lines-after-function-or-class)
810 | # end
    |
    = help: Add missing blank line(s)

ℹ Safe fix
806 806 |     # comment
807 807 | 
808 808 |     # another comment
    809 |+
809 810 | a = 1
810 811 | # end
811 812 | 

E30.py:821:1: E305 (blank-lines-after-function-or-class) [*] Expected 2 blank lines after class or function definition, found (1)
    |
819 |     # another comment
820 |
821 | try:
    | ^^^ E305 (blank-lines-after-function-or-class)
822 |     fn()
823 | except Exception:
    |
    = help: Add missing blank line(s)

ℹ Safe fix
818 818 | 
819 819 |     # another comment
820 820 | 
    821 |+
821 822 | try:
822 823 |     fn()
823 824 | except Exception:

E30.py:833:1: E305 (blank-lines-after-function-or-class) [*] Expected 2 blank lines after class or function definition, found (1)
    |
832 | # Two spaces before comments, too.
833 | if a():
    | ^^ E305 (blank-lines-after-function-or-class)
834 |     a()
835 | # end
    |
    = help: Add missing blank line(s)

ℹ Safe fix
829 829 | def a():
830 830 |     print()
831 831 | 
    832 |+
832 833 | # Two spaces before comments, too.
833 834 | if a():
834 835 |     a()

E30.py:846:1: E305 (blank-lines-after-function-or-class) [*] Expected 2 blank lines after class or function definition, found (1)
    |
844 |     blah, blah
845 |
846 | if __name__ == '__main__':
    | ^^ E305 (blank-lines-after-function-or-class)
847 |     main()
848 | # end
    |
    = help: Add missing blank line(s)

ℹ Safe fix
843 843 | def main():
844 844 |     blah, blah
845 845 | 
    846 |+
846 847 | if __name__ == '__main__':
847 848 |     main()
848 849 | # end

E30.py:973:1: E305 (blank-lines-after-function-or-class) [*] Expected 2 blank lines after class or function definition, found (1)
    |
972 | # ====== Cool constants ========
973 | BANANA = 100
    | ^^^^^^ E305 (blank-lines-after-function-or-class)
974 | APPLE = 200
    |
    = help: Add missing blank line(s)

ℹ Safe fix
969 969 | class A:
970 970 |     pass
971 971 | 
    972 |+
972 973 | # ====== Cool constants ========
973 974 | BANANA = 100
974 975 | APPLE = 200
