crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__E402_E402.ipynb.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E402.ipynb:9:1: E402 (module-import-not-at-top-of-file) Module level import not at top of cell
   |
 7 | os.path
 8 |
 9 | import pathlib
   | ^^^^^^^^^^^^^^ E402 (module-import-not-at-top-of-file)
10 |
11 | import a
   |

E402.ipynb:22:1: E402 (module-import-not-at-top-of-file) Module level import not at top of cell
   |
20 | __some__magic = 1
21 |
22 | import c
   | ^^^^^^^^ E402 (module-import-not-at-top-of-file)
23 | import ok
   |

E402.ipynb:30:1: E402 (module-import-not-at-top-of-file) Module level import not at top of cell
   |
30 | import no_ok
   | ^^^^^^^^^^^^ E402 (module-import-not-at-top-of-file)
31 |
32 | %%time
   |
