crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__E402_E402_1.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E402_1.py:5:1: E402 (module-import-not-at-top-of-file) Module level import not at top of file
  |
3 | """Some other docstring."""
4 |
5 | import b
  | ^^^^^^^^ E402 (module-import-not-at-top-of-file)
6 |
7 | """Some other docstring."""
  |

E402_1.py:9:1: E402 (module-import-not-at-top-of-file) Module level import not at top of file
  |
7 | """Some other docstring."""
8 |
9 | import c
  | ^^^^^^^^ E402 (module-import-not-at-top-of-file)
  |
