crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__E711_E711.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E711.py:2:11: E711 (none-comparison) [*] Comparison to `None` should be `cond is None`
  |
1 | #: E711
2 | if res == None:
  |           ^^^^ E711 (none-comparison)
3 |     pass
4 | #: E711
  |
  = help: Replace with `cond is None`

ℹ Unsafe fix
1 1 | #: E711
2   |-if res == None:
  2 |+if res is None:
3 3 |     pass
4 4 | #: E711
5 5 | if res != None:

E711.py:5:11: E711 (none-comparison) [*] Comparison to `None` should be `cond is not None`
  |
3 |     pass
4 | #: E711
5 | if res != None:
  |           ^^^^ E711 (none-comparison)
6 |     pass
7 | #: E711
  |
  = help: Replace with `cond is not None`

ℹ Unsafe fix
2 2 | if res == None:
3 3 |     pass
4 4 | #: E711
5   |-if res != None:
  5 |+if res is not None:
6 6 |     pass
7 7 | #: E711
8 8 | if None == res:

E711.py:8:4: E711 (none-comparison) [*] Comparison to `None` should be `cond is None`
   |
 6 |     pass
 7 | #: E711
 8 | if None == res:
   |    ^^^^ E711 (none-comparison)
 9 |     pass
10 | #: E711
   |
   = help: Replace with `cond is None`

ℹ Unsafe fix
5 5 | if res != None:
6 6 |     pass
7 7 | #: E711
8   |-if None == res:
  8 |+if None is res:
9 9 |     pass
10 10 | #: E711
11 11 | if None != res:

E711.py:11:4: E711 (none-comparison) [*] Comparison to `None` should be `cond is not None`
   |
 9 |     pass
10 | #: E711
11 | if None != res:
   |    ^^^^ E711 (none-comparison)
12 |     pass
13 | #: E711
   |
   = help: Replace with `cond is not None`

ℹ Unsafe fix
8  8  | if None == res:
9  9  |     pass
10 10 | #: E711
11    |-if None != res:
   11 |+if None is not res:
12 12 |     pass
13 13 | #: E711
14 14 | if res[1] == None:

E711.py:14:14: E711 (none-comparison) [*] Comparison to `None` should be `cond is None`
   |
12 |     pass
13 | #: E711
14 | if res[1] == None:
   |              ^^^^ E711 (none-comparison)
15 |     pass
16 | #: E711
   |
   = help: Replace with `cond is None`

ℹ Unsafe fix
11 11 | if None != res:
12 12 |     pass
13 13 | #: E711
14    |-if res[1] == None:
   14 |+if res[1] is None:
15 15 |     pass
16 16 | #: E711
17 17 | if res[1] != None:

E711.py:17:14: E711 (none-comparison) [*] Comparison to `None` should be `cond is not None`
   |
15 |     pass
16 | #: E711
17 | if res[1] != None:
   |              ^^^^ E711 (none-comparison)
18 |     pass
19 | #: E711
   |
   = help: Replace with `cond is not None`

ℹ Unsafe fix
14 14 | if res[1] == None:
15 15 |     pass
16 16 | #: E711
17    |-if res[1] != None:
   17 |+if res[1] is not None:
18 18 |     pass
19 19 | #: E711
20 20 | if None != res[1]:

E711.py:20:4: E711 (none-comparison) [*] Comparison to `None` should be `cond is not None`
   |
18 |     pass
19 | #: E711
20 | if None != res[1]:
   |    ^^^^ E711 (none-comparison)
21 |     pass
22 | #: E711
   |
   = help: Replace with `cond is not None`

ℹ Unsafe fix
17 17 | if res[1] != None:
18 18 |     pass
19 19 | #: E711
20    |-if None != res[1]:
   20 |+if None is not res[1]:
21 21 |     pass
22 22 | #: E711
23 23 | if None == res[1]:

E711.py:23:4: E711 (none-comparison) [*] Comparison to `None` should be `cond is None`
   |
21 |     pass
22 | #: E711
23 | if None == res[1]:
   |    ^^^^ E711 (none-comparison)
24 |     pass
   |
   = help: Replace with `cond is None`

ℹ Unsafe fix
20 20 | if None != res[1]:
21 21 |     pass
22 22 | #: E711
23    |-if None == res[1]:
   23 |+if None is res[1]:
24 24 |     pass
25 25 | 
26 26 | if x == None != None:

E711.py:26:9: E711 (none-comparison) [*] Comparison to `None` should be `cond is None`
   |
24 |     pass
25 |
26 | if x == None != None:
   |         ^^^^ E711 (none-comparison)
27 |     pass
   |
   = help: Replace with `cond is None`

ℹ Unsafe fix
23 23 | if None == res[1]:
24 24 |     pass
25 25 | 
26    |-if x == None != None:
   26 |+if x is None is not None:
27 27 |     pass
28 28 | 
29 29 | #: Okay

E711.py:26:17: E711 (none-comparison) [*] Comparison to `None` should be `cond is not None`
   |
24 |     pass
25 |
26 | if x == None != None:
   |                 ^^^^ E711 (none-comparison)
27 |     pass
   |
   = help: Replace with `cond is not None`

ℹ Unsafe fix
23 23 | if None == res[1]:
24 24 |     pass
25 25 | 
26    |-if x == None != None:
   26 |+if x is None is not None:
27 27 |     pass
28 28 | 
29 29 | #: Okay
