crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__E712_E712.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E712.py:2:4: E712 (true-false-comparison) [*] Avoid equality comparisons to `True`; use `res:` for truth checks
  |
1 | #: E712
2 | if res == True:
  |    ^^^^^^^^^^^ E712 (true-false-comparison)
3 |     pass
4 | #: E712
  |
  = help: Replace with `res`

ℹ Unsafe fix
1 1 | #: E712
2   |-if res == True:
  2 |+if res:
3 3 |     pass
4 4 | #: E712
5 5 | if res != False:

E712.py:5:4: E712 (true-false-comparison) [*] Avoid inequality comparisons to `False`; use `res:` for truth checks
  |
3 |     pass
4 | #: E712
5 | if res != False:
  |    ^^^^^^^^^^^^ E712 (true-false-comparison)
6 |     pass
7 | #: E712
  |
  = help: Replace with `res`

ℹ Unsafe fix
2 2 | if res == True:
3 3 |     pass
4 4 | #: E712
5   |-if res != False:
  5 |+if res:
6 6 |     pass
7 7 | #: E712
8 8 | if True != res:

E712.py:8:4: E712 (true-false-comparison) [*] Avoid inequality comparisons to `True`; use `not res:` for false checks
   |
 6 |     pass
 7 | #: E712
 8 | if True != res:
   |    ^^^^^^^^^^^ E712 (true-false-comparison)
 9 |     pass
10 | #: E712
   |
   = help: Replace with `not res`

ℹ Unsafe fix
5 5 | if res != False:
6 6 |     pass
7 7 | #: E712
8   |-if True != res:
  8 |+if not res:
9 9 |     pass
10 10 | #: E712
11 11 | if False == res:

E712.py:11:4: E712 (true-false-comparison) [*] Avoid equality comparisons to `False`; use `not res:` for false checks
   |
 9 |     pass
10 | #: E712
11 | if False == res:
   |    ^^^^^^^^^^^^ E712 (true-false-comparison)
12 |     pass
13 | #: E712
   |
   = help: Replace with `not res`

ℹ Unsafe fix
8  8  | if True != res:
9  9  |     pass
10 10 | #: E712
11    |-if False == res:
   11 |+if not res:
12 12 |     pass
13 13 | #: E712
14 14 | if res[1] == True:

E712.py:14:4: E712 (true-false-comparison) [*] Avoid equality comparisons to `True`; use `res[1]:` for truth checks
   |
12 |     pass
13 | #: E712
14 | if res[1] == True:
   |    ^^^^^^^^^^^^^^ E712 (true-false-comparison)
15 |     pass
16 | #: E712
   |
   = help: Replace with `res[1]`

ℹ Unsafe fix
11 11 | if False == res:
12 12 |     pass
13 13 | #: E712
14    |-if res[1] == True:
   14 |+if res[1]:
15 15 |     pass
16 16 | #: E712
17 17 | if res[1] != False:

E712.py:17:4: E712 (true-false-comparison) [*] Avoid inequality comparisons to `False`; use `res[1]:` for truth checks
   |
15 |     pass
16 | #: E712
17 | if res[1] != False:
   |    ^^^^^^^^^^^^^^^ E712 (true-false-comparison)
18 |     pass
19 | #: E712
   |
   = help: Replace with `res[1]`

ℹ Unsafe fix
14 14 | if res[1] == True:
15 15 |     pass
16 16 | #: E712
17    |-if res[1] != False:
   17 |+if res[1]:
18 18 |     pass
19 19 | #: E712
20 20 | var = 1 if cond == True else -1 if cond == False else cond

E712.py:20:12: E712 (true-false-comparison) [*] Avoid equality comparisons to `True`; use `cond:` for truth checks
   |
18 |     pass
19 | #: E712
20 | var = 1 if cond == True else -1 if cond == False else cond
   |            ^^^^^^^^^^^^ E712 (true-false-comparison)
21 | #: E712
22 | if (True) == TrueElement or x == TrueElement:
   |
   = help: Replace with `cond`

ℹ Unsafe fix
17 17 | if res[1] != False:
18 18 |     pass
19 19 | #: E712
20    |-var = 1 if cond == True else -1 if cond == False else cond
   20 |+var = 1 if cond else -1 if cond == False else cond
21 21 | #: E712
22 22 | if (True) == TrueElement or x == TrueElement:
23 23 |     pass

E712.py:20:36: E712 (true-false-comparison) [*] Avoid equality comparisons to `False`; use `not cond:` for false checks
   |
18 |     pass
19 | #: E712
20 | var = 1 if cond == True else -1 if cond == False else cond
   |                                    ^^^^^^^^^^^^^ E712 (true-false-comparison)
21 | #: E712
22 | if (True) == TrueElement or x == TrueElement:
   |
   = help: Replace with `not cond`

ℹ Unsafe fix
17 17 | if res[1] != False:
18 18 |     pass
19 19 | #: E712
20    |-var = 1 if cond == True else -1 if cond == False else cond
   20 |+var = 1 if cond == True else -1 if not cond else cond
21 21 | #: E712
22 22 | if (True) == TrueElement or x == TrueElement:
23 23 |     pass

E712.py:22:4: E712 (true-false-comparison) [*] Avoid equality comparisons to `True`; use `TrueElement:` for truth checks
   |
20 | var = 1 if cond == True else -1 if cond == False else cond
21 | #: E712
22 | if (True) == TrueElement or x == TrueElement:
   |    ^^^^^^^^^^^^^^^^^^^^^ E712 (true-false-comparison)
23 |     pass
   |
   = help: Replace with `TrueElement`

ℹ Unsafe fix
19 19 | #: E712
20 20 | var = 1 if cond == True else -1 if cond == False else cond
21 21 | #: E712
22    |-if (True) == TrueElement or x == TrueElement:
   22 |+if (TrueElement) or x == TrueElement:
23 23 |     pass
24 24 | 
25 25 | if res == True != False:

E712.py:25:4: E712 (true-false-comparison) [*] Avoid equality comparisons to `True` or `False`
   |
23 |     pass
24 |
25 | if res == True != False:
   |    ^^^^^^^^^^^^^^^^^^^^ E712 (true-false-comparison)
26 |     pass
   |
   = help: Replace comparison

ℹ Unsafe fix
22 22 | if (True) == TrueElement or x == TrueElement:
23 23 |     pass
24 24 | 
25    |-if res == True != False:
   25 |+if res is True is not False:
26 26 |     pass
27 27 | 
28 28 | if(True) == TrueElement or x == TrueElement:

E712.py:25:4: E712 (true-false-comparison) [*] Avoid equality comparisons to `True` or `False`
   |
23 |     pass
24 |
25 | if res == True != False:
   |    ^^^^^^^^^^^^^^^^^^^^ E712 (true-false-comparison)
26 |     pass
   |
   = help: Replace comparison

ℹ Unsafe fix
22 22 | if (True) == TrueElement or x == TrueElement:
23 23 |     pass
24 24 | 
25    |-if res == True != False:
   25 |+if res is True is not False:
26 26 |     pass
27 27 | 
28 28 | if(True) == TrueElement or x == TrueElement:

E712.py:28:3: E712 (true-false-comparison) [*] Avoid equality comparisons to `True`; use `TrueElement:` for truth checks
   |
26 |     pass
27 |
28 | if(True) == TrueElement or x == TrueElement:
   |   ^^^^^^^^^^^^^^^^^^^^^ E712 (true-false-comparison)
29 |     pass
   |
   = help: Replace with `TrueElement`

ℹ Unsafe fix
25 25 | if res == True != False:
26 26 |     pass
27 27 | 
28    |-if(True) == TrueElement or x == TrueElement:
   28 |+if(TrueElement) or x == TrueElement:
29 29 |     pass
30 30 | 
31 31 | if (yield i) == True:

E712.py:31:4: E712 (true-false-comparison) [*] Avoid equality comparisons to `True`; use `yield i:` for truth checks
   |
29 |     pass
30 |
31 | if (yield i) == True:
   |    ^^^^^^^^^^^^^^^^^ E712 (true-false-comparison)
32 |       print("even")
   |
   = help: Replace with `yield i`

ℹ Unsafe fix
28 28 | if(True) == TrueElement or x == TrueElement:
29 29 |     pass
30 30 | 
31    |-if (yield i) == True:
   31 |+if (yield i):
32 32 |       print("even")
33 33 | 
34 34 | #: Okay

E712.py:58:4: E712 (true-false-comparison) [*] Avoid equality comparisons to `True`; use `True:` for truth checks
   |
57 | # https://github.com/astral-sh/ruff/issues/17582
58 | if True == True: # No duplicated diagnostic
   |    ^^^^^^^^^^^^ E712 (true-false-comparison)
59 |     pass
   |
   = help: Replace with `True`

ℹ Unsafe fix
55 55 | assert [42, not foo] in bar
56 56 | 
57 57 | # https://github.com/astral-sh/ruff/issues/17582
58    |-if True == True: # No duplicated diagnostic
   58 |+if True: # No duplicated diagnostic
59 59 |     pass
